# book_management

./: Dockerfile  manage.py  pyproject.toml  readme.md
app/: settings.py
apps/authors/: models.py
apps/authors/api/: serializers.py  urls.py  views.py
apps/books/: models.py
apps/books/api/: serializers.py  urls.py  views.py
apps/books/management/commands/: insert_data.py
apps/commons/: generics.py  models.py  validations.py  viewset.py
apps/commons/utils/: pagination.py
apps/genres/: models.py
apps/genres/api/: serializers.py  urls.py  views.py
apps/users/: models.py
apps/users/api/: serializers.py  urls.py  views.py
book_management/: asgi.py  authentication.py  logger.py  settings.py  urls.py  views.py  wsgi.py
