[tool.poetry]
name = "book-management"
version = "0.1.0"
description = ""
authors = ["Joel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
djangorestframework = "^3.15.2"
pymongo = "^4.10.1"
django-mongodb-engine = {git = "https://github.com/django-nonrel/mongodb-engine"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
