[tool.poetry]
name = "book-management"
version = "0.1.0"
description = ""
authors = ["Joel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
djangorestframework = "^3.15.2"
pymongo = "^4.10.1"
django-mongodb-engine = { git = "https://github.com/django-nonrel/mongodb-engine" }
ruff = "^0.9.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
target-version = "py312"
ignore = ["E501"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",
    "I",   # isort
    "N",   # Name conventions
    "T20", # print
    "G",   # logging
    "ARG", # unused args
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.isort]
known-first-party = ["apps"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "tests",
    "local-folder",
]

[tool.ruff.isort.sections]
"tests" = ["tests"]

[tool.ruff.per-file-ignores]
"**/settings/*" = ["E402", "F405", "F403"]


[tool.black]
line-length = 120
target-version = ['py38']

[tool.pytest.ini_options]
addopts = "-s --cov --cov-append"
filterwarnings = ["ignore::DeprecationWarning:openpyxl"]
testpaths = ["tests"]
