[tool.poetry]
name = "book-management"
version = "0.1.0"
description = ""
authors = ["Joel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
djangorestframework = "^3.15.2"
pymongo = {extras = ["gssapi", "snappy", "srv", "tls"], version = "^4.10.1"}
django-mongodb-engine = { git = "https://github.com/django-nonrel/mongodb-engine" }
ruff = "^0.9.2"
loguru = "^0.7.3"
mongoengine = "^0.29.1"
django-environ = "^0.12.0"
django-rest-framework-mongoengine = "^3.4.1"
django-cors-headers = "^4.6.0"
black = "^24.10.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = ["E501"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",
    "I",   # isort
    "N",   # Name conventions
    "T20", # print
    "G",   # logging
    "ARG", # unused args
]
[tool.ruff.lint.isort]
known-first-party = ["apps"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"tests" = ["tests"]

[tool.ruff.lint.per-file-ignores]
"**/settings/*" = ["E402", "F405", "F403"]


[tool.black]
line-length = 120
target-version = ['py38']

[tool.pytest.ini_options]
addopts = "-s --cov --cov-append"
filterwarnings = ["ignore::DeprecationWarning:openpyxl"]
testpaths = ["tests"]
